crates/oxc_react_compiler/tests/snapshots/lone-surrogate-string-values.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/lone-surrogate-string-values.js
---
import { c as _c } from "react/compiler-runtime";
function Component() {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = <Emoji codepoints={["\ud83e", "\udd21"]} size={16} />;
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
