crates/oxc_react_compiler/tests/snapshots/loop-unused-let.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/loop-unused-let.js
---
function useFoo() {
	while (1) {}
}
