crates/oxc_react_compiler/tests/snapshots/lowercase-context-variable-as-jsx-element-tag.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/lowercase-context-variable-as-jsx-element-tag.js
---
import { c as _c } from "react/compiler-runtime";
const navTitle = getTitle();
function NavTitle() {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = <navTitle value={1} />;
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: NavTitle,
	params: []
};
