crates/oxc_react_compiler/tests/snapshots/maybe-mutate-object-in-callback.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/maybe-mutate-object-in-callback.js
---
import { c as _c } from "react/compiler-runtime";
const { mutate } = require("shared-runtime");
function Component(props) {
	const $ = _c(3);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		const object = {};
		t0 = () => {
			mutate(object);
		};
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	const onClick = t0;
	let t1;
	if ($[1] !== props.children) {
		t1 = <Foo callback={onClick}>{props.children}</Foo>;
		$[1] = props.children;
		$[2] = t1;
	} else {
		t1 = $[2];
	}
	return t1;
}
function Foo(t0) {
	const { children } = t0;
	return children;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ children: <div>Hello</div> }]
};
