crates/oxc_react_compiler/tests/snapshots/memoize-bigint-global-calls.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/memoize-bigint-global-calls.tsx
---
import { c as _c } from "react/compiler-runtime";
// @compilationMode:"infer" @panicThreshold:"none"
import { useState } from "react";
export function Component() {
	const $ = _c(4);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = BigInt("123");
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	const [value, setValue] = useState(t0);
	let t1;
	if ($[1] === Symbol.for("react.memo_cache_sentinel")) {
		t1 = BigInt(10);
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	let t2;
	if ($[2] !== value) {
		t2 = <input value={value} onChange={setValue} step={t1} />;
		$[2] = value;
		$[3] = t2;
	} else {
		t2 = $[3];
	}
	return t2;
}
